src/gram.output
Terminals which are not used

   ERROR
   COMMENT
   SPACES
   ROXYGEN_COMMENT
   SYMBOL_FORMALS
   EQ_FORMALS
   EQ_SUB
   SYMBOL_SUB
   SYMBOL_FUNCTION_CALL
   SYMBOL_PACKAGE
   NOT
   UPLUS


State 25 conflicts: 28 shift/reduce
State 38 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 121 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 131 conflicts: 27 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: END_OF_INPUT
    2     | '\n'
    3     | expr_or_assign '\n'
    4     | expr_or_assign ';'
    5     | error

    6 expr_or_assign: expr
    7               | equal_assign

    8 equal_assign: expr EQ_ASSIGN expr_or_assign

    9 expr: NUM_CONST
   10     | STR_CONST
   11     | NULL_CONST
   12     | SYMBOL
   13     | '{' exprlist '}'
   14     | '(' expr_or_assign ')'
   15     | '-' expr
   16     | '+' expr
   17     | '!' expr
   18     | '~' expr
   19     | '?' expr
   20     | expr ':' expr
   21     | expr '+' expr
   22     | expr '-' expr
   23     | expr '*' expr
   24     | expr '/' expr
   25     | expr '^' expr
   26     | expr SPECIAL expr
   27     | expr '%' expr
   28     | expr '~' expr
   29     | expr '?' expr
   30     | expr LT expr
   31     | expr LE expr
   32     | expr EQ expr
   33     | expr NE expr
   34     | expr GE expr
   35     | expr GT expr
   36     | expr AND expr
   37     | expr OR expr
   38     | expr AND2 expr
   39     | expr OR2 expr
   40     | expr LEFT_ASSIGN expr
   41     | expr RIGHT_ASSIGN expr
   42     | FUNCTION '(' formlist ')' cr expr_or_assign
   43     | expr '(' sublist ')'
   44     | IF ifcond expr_or_assign
   45     | IF ifcond expr_or_assign ELSE expr_or_assign
   46     | FOR forcond expr_or_assign
   47     | WHILE cond expr_or_assign
   48     | REPEAT expr_or_assign
   49     | expr LBB sublist ']' ']'
   50     | expr '[' sublist ']'
   51     | SYMBOL NS_GET SYMBOL
   52     | SYMBOL NS_GET STR_CONST
   53     | STR_CONST NS_GET SYMBOL
   54     | STR_CONST NS_GET STR_CONST
   55     | SYMBOL NS_GET_INT SYMBOL
   56     | SYMBOL NS_GET_INT STR_CONST
   57     | STR_CONST NS_GET_INT SYMBOL
   58     | STR_CONST NS_GET_INT STR_CONST
   59     | expr '$' SYMBOL
   60     | expr '$' STR_CONST
   61     | expr '@' SYMBOL
   62     | expr '@' STR_CONST
   63     | NEXT
   64     | BREAK

   65 cond: '(' expr ')'

   66 ifcond: '(' expr ')'

   67 forcond: '(' SYMBOL IN expr ')'

   68 exprlist: /* empty */
   69         | expr_or_assign
   70         | exprlist ';' expr_or_assign
   71         | exprlist ';'
   72         | exprlist '\n' expr_or_assign
   73         | exprlist '\n'

   74 sublist: sub
   75        | sublist cr ',' sub

   76 sub: /* empty */
   77    | expr
   78    | SYMBOL EQ_ASSIGN
   79    | SYMBOL EQ_ASSIGN expr
   80    | STR_CONST EQ_ASSIGN
   81    | STR_CONST EQ_ASSIGN expr
   82    | NULL_CONST EQ_ASSIGN
   83    | NULL_CONST EQ_ASSIGN expr

   84 formlist: /* empty */
   85         | SYMBOL
   86         | SYMBOL EQ_ASSIGN expr
   87         | formlist ',' SYMBOL
   88         | formlist ',' SYMBOL EQ_ASSIGN expr

   89 cr: /* empty */


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 72 73
'!' (33) 17
'$' (36) 59 60
'%' (37) 27
'(' (40) 14 42 43 65 66 67
')' (41) 14 42 43 65 66 67
'*' (42) 23
'+' (43) 16 21
',' (44) 75 87 88
'-' (45) 15 22
'/' (47) 24
':' (58) 20
';' (59) 4 70 71
'?' (63) 19 29
'@' (64) 61 62
'[' (91) 50
']' (93) 49 50
'^' (94) 25
'{' (123) 13
'}' (125) 13
'~' (126) 18 28
error (256) 5
END_OF_INPUT (258) 1
ERROR (259)
STR_CONST (260) 10 52 53 54 56 57 58 60 62 80 81
NUM_CONST (261) 9
NULL_CONST (262) 11 82 83
SYMBOL (263) 12 51 52 53 55 56 57 59 61 67 78 79 85 86 87 88
FUNCTION (264) 42
LEFT_ASSIGN (265) 40
EQ_ASSIGN (266) 8 78 79 80 81 82 83 86 88
RIGHT_ASSIGN (267) 41
LBB (268) 49
FOR (269) 46
IN (270) 67
IF (271) 44 45
ELSE (272) 45
WHILE (273) 47
NEXT (274) 63
BREAK (275) 64
REPEAT (276) 48
GT (277) 35
GE (278) 34
LT (279) 30
LE (280) 31
EQ (281) 32
NE (282) 33
AND (283) 36
OR (284) 37
AND2 (285) 38
OR2 (286) 39
NS_GET (287) 51 52 53 54
NS_GET_INT (288) 55 56 57 58
COMMENT (289)
SPACES (290)
ROXYGEN_COMMENT (291)
SYMBOL_FORMALS (292)
EQ_FORMALS (293)
EQ_SUB (294)
SYMBOL_SUB (295)
SYMBOL_FUNCTION_CALL (296)
SYMBOL_PACKAGE (297)
LOW (298)
TILDE (299)
NOT (300)
UNOT (301)
SPECIAL (302) 26
UPLUS (303)
UMINUS (304)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
prog (72)
    on left: 1 2 3 4 5, on right: 0
expr_or_assign (73)
    on left: 6 7, on right: 3 4 8 14 42 44 45 46 47 48 69 70 72
equal_assign (74)
    on left: 8, on right: 7
expr (75)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64,
    on right: 6 8 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38 39 40 41 43 49 50 59 60 61 62 65 66 67 77
    79 81 83 86 88
cond (76)
    on left: 65, on right: 47
ifcond (77)
    on left: 66, on right: 44 45
forcond (78)
    on left: 67, on right: 46
exprlist (79)
    on left: 68 69 70 71 72 73, on right: 13 70 71 72 73
sublist (80)
    on left: 74 75, on right: 43 49 50 75
sub (81)
    on left: 76 77 78 79 80 81 82 83, on right: 74 75
formlist (82)
    on left: 84 85 86 87 88, on right: 42 87 88
cr (83)
    on left: 89, on right: 42 75


state 0

    0 $accept: . prog $end

    error         shift, and go to state 1
    END_OF_INPUT  shift, and go to state 2
    STR_CONST     shift, and go to state 3
    NUM_CONST     shift, and go to state 4
    NULL_CONST    shift, and go to state 5
    SYMBOL        shift, and go to state 6
    FUNCTION      shift, and go to state 7
    FOR           shift, and go to state 8
    IF            shift, and go to state 9
    WHILE         shift, and go to state 10
    NEXT          shift, and go to state 11
    BREAK         shift, and go to state 12
    REPEAT        shift, and go to state 13
    '?'           shift, and go to state 14
    '~'           shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18
    '\n'          shift, and go to state 19
    '{'           shift, and go to state 20
    '!'           shift, and go to state 21

    prog            go to state 22
    expr_or_assign  go to state 23
    equal_assign    go to state 24
    expr            go to state 25


state 1

    5 prog: error .

    $default  reduce using rule 5 (prog)


state 2

    1 prog: END_OF_INPUT .

    $default  reduce using rule 1 (prog)


state 3

   10 expr: STR_CONST .
   53     | STR_CONST . NS_GET SYMBOL
   54     | STR_CONST . NS_GET STR_CONST
   57     | STR_CONST . NS_GET_INT SYMBOL
   58     | STR_CONST . NS_GET_INT STR_CONST

    NS_GET      shift, and go to state 26
    NS_GET_INT  shift, and go to state 27

    $default  reduce using rule 10 (expr)


state 4

    9 expr: NUM_CONST .

    $default  reduce using rule 9 (expr)


state 5

   11 expr: NULL_CONST .

    $default  reduce using rule 11 (expr)


state 6

   12 expr: SYMBOL .
   51     | SYMBOL . NS_GET SYMBOL
   52     | SYMBOL . NS_GET STR_CONST
   55     | SYMBOL . NS_GET_INT SYMBOL
   56     | SYMBOL . NS_GET_INT STR_CONST

    NS_GET      shift, and go to state 28
    NS_GET_INT  shift, and go to state 29

    $default  reduce using rule 12 (expr)


state 7

   42 expr: FUNCTION . '(' formlist ')' cr expr_or_assign

    '('  shift, and go to state 30


state 8

   46 expr: FOR . forcond expr_or_assign

    '('  shift, and go to state 31

    forcond  go to state 32


state 9

   44 expr: IF . ifcond expr_or_assign
   45     | IF . ifcond expr_or_assign ELSE expr_or_assign

    '('  shift, and go to state 33

    ifcond  go to state 34


state 10

   47 expr: WHILE . cond expr_or_assign

    '('  shift, and go to state 35

    cond  go to state 36


state 11

   63 expr: NEXT .

    $default  reduce using rule 63 (expr)


state 12

   64 expr: BREAK .

    $default  reduce using rule 64 (expr)


state 13

   48 expr: REPEAT . expr_or_assign

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr_or_assign  go to state 37
    equal_assign    go to state 24
    expr            go to state 25


state 14

   19 expr: '?' . expr

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr  go to state 38


state 15

   18 expr: '~' . expr

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr  go to state 39


state 16

   16 expr: '+' . expr

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr  go to state 40


state 17

   15 expr: '-' . expr

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr  go to state 41


state 18

   14 expr: '(' . expr_or_assign ')'

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr_or_assign  go to state 42
    equal_assign    go to state 24
    expr            go to state 25


state 19

    2 prog: '\n' .

    $default  reduce using rule 2 (prog)


state 20

   13 expr: '{' . exprlist '}'

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    $default  reduce using rule 68 (exprlist)

    expr_or_assign  go to state 43
    equal_assign    go to state 24
    expr            go to state 25
    exprlist        go to state 44


state 21

   17 expr: '!' . expr

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr  go to state 45


state 22

    0 $accept: prog . $end

    $end  shift, and go to state 46


state 23

    3 prog: expr_or_assign . '\n'
    4     | expr_or_assign . ';'

    '\n'  shift, and go to state 47
    ';'   shift, and go to state 48


state 24

    7 expr_or_assign: equal_assign .

    $default  reduce using rule 7 (expr_or_assign)


state 25

    6 expr_or_assign: expr .
    8 equal_assign: expr . EQ_ASSIGN expr_or_assign
   20 expr: expr . ':' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   26     | expr . SPECIAL expr
   27     | expr . '%' expr
   28     | expr . '~' expr
   29     | expr . '?' expr
   30     | expr . LT expr
   31     | expr . LE expr
   32     | expr . EQ expr
   33     | expr . NE expr
   34     | expr . GE expr
   35     | expr . GT expr
   36     | expr . AND expr
   37     | expr . OR expr
   38     | expr . AND2 expr
   39     | expr . OR2 expr
   40     | expr . LEFT_ASSIGN expr
   41     | expr . RIGHT_ASSIGN expr
   43     | expr . '(' sublist ')'
   49     | expr . LBB sublist ']' ']'
   50     | expr . '[' sublist ']'
   59     | expr . '$' SYMBOL
   60     | expr . '$' STR_CONST
   61     | expr . '@' SYMBOL
   62     | expr . '@' STR_CONST

    LEFT_ASSIGN   shift, and go to state 49
    EQ_ASSIGN     shift, and go to state 50
    RIGHT_ASSIGN  shift, and go to state 51
    LBB           shift, and go to state 52
    GT            shift, and go to state 53
    GE            shift, and go to state 54
    LT            shift, and go to state 55
    LE            shift, and go to state 56
    EQ            shift, and go to state 57
    NE            shift, and go to state 58
    AND           shift, and go to state 59
    OR            shift, and go to state 60
    AND2          shift, and go to state 61
    OR2           shift, and go to state 62
    '?'           shift, and go to state 63
    '~'           shift, and go to state 64
    '+'           shift, and go to state 65
    '-'           shift, and go to state 66
    '*'           shift, and go to state 67
    '/'           shift, and go to state 68
    SPECIAL       shift, and go to state 69
    ':'           shift, and go to state 70
    '^'           shift, and go to state 71
    '$'           shift, and go to state 72
    '@'           shift, and go to state 73
    '('           shift, and go to state 74
    '['           shift, and go to state 75
    '%'           shift, and go to state 76

    LEFT_ASSIGN   [reduce using rule 6 (expr_or_assign)]
    EQ_ASSIGN     [reduce using rule 6 (expr_or_assign)]
    RIGHT_ASSIGN  [reduce using rule 6 (expr_or_assign)]
    LBB           [reduce using rule 6 (expr_or_assign)]
    GT            [reduce using rule 6 (expr_or_assign)]
    GE            [reduce using rule 6 (expr_or_assign)]
    LT            [reduce using rule 6 (expr_or_assign)]
    LE            [reduce using rule 6 (expr_or_assign)]
    EQ            [reduce using rule 6 (expr_or_assign)]
    NE            [reduce using rule 6 (expr_or_assign)]
    AND           [reduce using rule 6 (expr_or_assign)]
    OR            [reduce using rule 6 (expr_or_assign)]
    AND2          [reduce using rule 6 (expr_or_assign)]
    OR2           [reduce using rule 6 (expr_or_assign)]
    '?'           [reduce using rule 6 (expr_or_assign)]
    '~'           [reduce using rule 6 (expr_or_assign)]
    '+'           [reduce using rule 6 (expr_or_assign)]
    '-'           [reduce using rule 6 (expr_or_assign)]
    '*'           [reduce using rule 6 (expr_or_assign)]
    '/'           [reduce using rule 6 (expr_or_assign)]
    SPECIAL       [reduce using rule 6 (expr_or_assign)]
    ':'           [reduce using rule 6 (expr_or_assign)]
    '^'           [reduce using rule 6 (expr_or_assign)]
    '$'           [reduce using rule 6 (expr_or_assign)]
    '@'           [reduce using rule 6 (expr_or_assign)]
    '('           [reduce using rule 6 (expr_or_assign)]
    '['           [reduce using rule 6 (expr_or_assign)]
    '%'           [reduce using rule 6 (expr_or_assign)]
    $default      reduce using rule 6 (expr_or_assign)


state 26

   53 expr: STR_CONST NS_GET . SYMBOL
   54     | STR_CONST NS_GET . STR_CONST

    STR_CONST  shift, and go to state 77
    SYMBOL     shift, and go to state 78


state 27

   57 expr: STR_CONST NS_GET_INT . SYMBOL
   58     | STR_CONST NS_GET_INT . STR_CONST

    STR_CONST  shift, and go to state 79
    SYMBOL     shift, and go to state 80


state 28

   51 expr: SYMBOL NS_GET . SYMBOL
   52     | SYMBOL NS_GET . STR_CONST

    STR_CONST  shift, and go to state 81
    SYMBOL     shift, and go to state 82


state 29

   55 expr: SYMBOL NS_GET_INT . SYMBOL
   56     | SYMBOL NS_GET_INT . STR_CONST

    STR_CONST  shift, and go to state 83
    SYMBOL     shift, and go to state 84


state 30

   42 expr: FUNCTION '(' . formlist ')' cr expr_or_assign

    SYMBOL  shift, and go to state 85

    $default  reduce using rule 84 (formlist)

    formlist  go to state 86


state 31

   67 forcond: '(' . SYMBOL IN expr ')'

    SYMBOL  shift, and go to state 87


state 32

   46 expr: FOR forcond . expr_or_assign

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr_or_assign  go to state 88
    equal_assign    go to state 24
    expr            go to state 25


state 33

   66 ifcond: '(' . expr ')'

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr  go to state 89


state 34

   44 expr: IF ifcond . expr_or_assign
   45     | IF ifcond . expr_or_assign ELSE expr_or_assign

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr_or_assign  go to state 90
    equal_assign    go to state 24
    expr            go to state 25


state 35

   65 cond: '(' . expr ')'

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr  go to state 91


state 36

   47 expr: WHILE cond . expr_or_assign

    STR_CONST   shift, and go to state 3
    NUM_CONST   shift, and go to state 4
    NULL_CONST  shift, and go to state 5
    SYMBOL      shift, and go to state 6
    FUNCTION    shift, and go to state 7
    FOR         shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    NEXT        shift, and go to state 11
    BREAK       shift, and go to state 12
    REPEAT      shift, and go to state 13
    '?'         shift, and go to state 14
    '~'         shift, and go to state 15
    '+'         shift, and go to state 16
    '-'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 20
    '!'         shift, and go to state 21

    expr_or_assign  go to state 92
    equal_assign    go to state 24
    expr            go to state 25


state 37

   48 expr: REPEAT expr_or_assign .

    $default  reduce using rule 48 (expr)


state 38

   19 expr: '?' expr .
   20     | expr . ':' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   26     | expr . SPECIAL expr
   27     | expr . '%' expr
   28     | expr . '~' expr
   29     | expr . '?' expr
   30     | expr . LT expr
   31     | expr . LE expr
   32     | expr . EQ expr
   33     | expr . NE expr
   34     | expr . GE expr
   35     | expr . GT expr
   36     | expr . AND expr
   37     | expr . OR expr
   38     | expr . AND2 expr
   39     | expr . OR2 expr
   40     | expr . LEFT_ASSIGN expr
   41     | expr . RIGHT_ASSIGN expr
   43     | expr . '(' sublist ')'
   49     | expr . LBB sublist ']' ']'
   50     | expr . '[' sublist ']'
   59     | expr . '$' SYMBOL
   60     | expr . '$' STR_CONST
   61     | expr . '@' SYMBOL
   62     | expr . '@' STR_CONST

    LEFT_ASSIGN   shift, and go to state 49
    RIGHT_ASSIGN  shift, and go to state 51
    LBB           shift, and go to state 52
    GT            shift, and go to state 53
    GE            shift, and go to state 54
    LT            shift, and go to state 55
    LE            shift, and go to state 56
    EQ            shift, and go to state 57
    NE            shift, and go to state 58
    AND           shift, and go to state 59
    OR            shift, and go to state 60
    AND2          shift, and go to state 61
    OR2           shift, and go to state 62
    '~'           shift, and go to state 64
    '+'           shift, and go to state 65
    '-'           shift, and go to state 66
    '*'           shift, and go to state 67
    '/'           shift, and go to state 68
    SPECIAL       shift, and go to state 69
    ':'           shift, and go to state 70
    '^'           shift, and go to state 71
    '$'           shift, and go to state 72
    '@'           shift, and go to state 73
    '('           shift, and go to state 74
    '['           shift, and go to state 75
    '%'           shift, and go to state 76

    '%'       [reduce using rule 19 (expr)]
    $default  reduce using rule 19 (expr)


state 39

   18 expr: '~' expr .
   20     | expr . ':' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   26     | expr . SPECIAL expr
   27     | expr . '%' expr
   28     | expr . '~' expr
   29     | expr . '?' expr
   30     | expr . LT expr
   31     | expr . LE expr
   32     | expr . EQ expr
   33     | expr . NE expr
   34     | expr . GE expr
   35     | expr . GT expr
   36     | expr . AND expr
   37     | expr . OR expr
   38     | expr . AND2 expr
   39     | expr . OR2 expr
   40     | expr . LEFT_ASSIGN expr
   41     | expr . RIGHT_ASSIGN expr
   43     | expr . '(' sublist ')'
   49     | expr . LBB sublist ']' ']'
   50     | expr . '[' sublist ']'
   59     | expr . '$' SYMBOL
   60     | expr . '$' STR_CONST
   61     | expr . '@' SYMBOL
   62     | expr . '@' STR_CONST

    LBB      shift, and go to state 52
    GT       shift, and go to state 53
    GE       shift, and go to state 54
    LT       shift, and go to state 55
    LE       shift, and go to state 56
    EQ       shift, and go to state 57
    NE       shift, and go to state 58
    AND      shift, and go to state 59
    OR       shift, and go to state 60
    AND2     shift, and go to state 61
    OR2      shift, and go to state 62
    '+'      shift, and go to state 65
    '-'      shift, and go to state 66
    '*'      shift, and go to state 67
    '/'      shift, and go to state 68
    SPECIAL  shift, and go to state 69
    ':'      shift, and go to state 70
    '^'      shift, and go to state 71
    '$'      shift, and go to state 72
    '@'      shift, and go to state 73
    '('      shift, and go to state 74
    '['      shift, and go to state 75
    '%'      shift, and go to state 76

    '%'       [reduce using rule 18 (expr)]
    $default  reduce using rule 18 (expr)


state 40

   16 expr: '+' expr .
   20     | expr . ':' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   26     | expr . SPECIAL expr
   27     | expr . '%' expr
   28     | expr . '~' expr
   29     | expr . '?' expr
   30     | expr . LT expr
   31     | expr . LE expr
   32     | expr . EQ expr
   33     | expr . NE expr
   34     | expr . GE expr
   35     | expr . GT expr
   36     | expr . AND expr
   37     | expr . OR expr
   38     | expr . AND2 expr
   39     | expr . OR2 expr
   40     | expr . LEFT_ASSIGN expr
   41     | expr . RIGHT_ASSIGN expr
   43     | expr . '(' sublist ')'
   49     | expr . LBB sublist ']' ']'
   50     | expr . '[' sublist ']'
   59     | expr . '$' SYMBOL
   60     | expr . '$' STR_CONST
   61     | expr . '@' SYMBOL
   62     | expr . '@' STR_CONST

    LBB  shift, and go to state 52
    '^'  shift, and go to state 71
    '$'  shift, and go to state 72
    '@'  shift, and go to state 73
    '('  shift, and go to state 74
    '['  shift, and go to state 75
    '%'  shift, and go to state 76

    '%'       [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)


state 41

   15 expr: '-' expr .
   20     | expr . ':' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   26     | expr . SPECIAL expr
   27     | expr . '%' expr
   28     | expr . '~' expr
   29     | expr . '?' expr
   30     | expr . LT expr
   31     | expr . LE expr
   32     | expr . EQ expr
   33     | expr . NE expr
   34     | expr . GE expr
   35     | expr . GT expr
   36     | expr . AND expr
   37     | expr . OR expr
   38     | expr . AND2 expr
   39     | expr . OR2 expr
   40     | expr . LEFT_ASSIGN expr
   41     | expr . RIGHT_ASSIGN expr
   43     | expr . '(' sublist ')'
   49     | expr . LBB sublist ']' ']'
   50     | expr . '[' sublist ']'
   59     | expr . '$' SYMBOL
   60     | expr . '$' STR_CONST
   61     | expr . '@' SYMBOL
   62     | expr . '@' STR_CONST

    LBB  shift, and go to state 52
    '^'  shift, and go to state 71
    '$'  shift, and go to state 72
    '@'  shift, and go to state 73
    '('  shift, and go to state 74
    '['  shift, and go to state 75
    '%'  shift, and go to state 76

    '%'       [reduce using rule 15 (expr)]
    $default  reduce using rule 15 (expr)


state 42

   14 expr: '(' expr_or_assign . ')'

    ')'  shift, and go to state 93


state 43

   69 exprlist: expr_or_assign .

    $default  reduce using rule 69 (exprlist)


state 44

   13 expr: '{' exprlist . '}'
   70 exprlist: exprlist . ';' expr_or_assign
   71         | exprlist . ';'
   72         | exprlist . '\n' expr_or_assign
   73         | exprlist . '\n'

    '\n'  shift, and go to state 94
    ';'   shift, and go to state 95
    '}'   shift, and go to state 96


state 45
